--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,31 @@
 <head>
     
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{{ site.description }}">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="{% if page.layout == 'post' %}{{ page.excerpt | strip_html | lstrip | rstrip }}{% else %}{{ site.description }}{% endif %}" />
+    
+    {% if page.layout == "post" %}
+    <meta property="og:url" content="{{ page.url | prepend: site.url }}" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:description" content="{{ page.excerpt | strip_html | lstrip | rstrip }}" />
+    <meta property="og:site_name" content="{{ site.title }}" />
+    <meta property="article:published_time" content="{{ page.date }}" />
+    
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@{{ site.media_twitter }}" />
+    <meta name="twitter:creator" content="@{{ site.media_twitter }}" />
+    <meta name="twitter:title" content="{{ page.title }}" />
+    <meta name="twitter:description" content="{{ site.excerpt | strip_html | lstrip | rstrip }}" />
+    <meta name="twitter:url" content="{{ page.url | prepend: site.url }}" />
+    <meta name="twitter:domain" content="{{ site.url }}" />
+    
+        {% if page.thumbnail %}
+        <meta property="og:image" content="{{ site.baseurl }}/imgs/posts/{{ page.url }}/{{ page.thumbnail }}" />
+        <meta name="twitter:image:src" content="{{ site.baseurl }}/imgs/posts/{{ page.url }}/{{ page.thumbnail }}" />
+        {% endif %}
+    {% endif %}
     
     <title>{{ site.title }}{%if page.title %} - {{ page.title }}{% endif %}</title>
     
