Fix twitter meta picture

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,7 @@
     
         {% if page.thumbnail %}
         <meta property="og:image" content="{{ site.baseurl }}/imgs/posts/{{ page.url }}/{{ page.thumbnail }}" />
-        <meta name="twitter:image:src" content="{{ site.baseurl }}/imgs/posts/{{ page.url }}/{{ page.thumbnail }}" />
+        <meta name="twitter:image" content="{{ site.baseurl }}/imgs/posts/{{ page.url }}/{{ page.thumbnail }}" />
         {% endif %}
     {% endif %}
     
