Fix imgs source

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,8 +22,8 @@
     <meta name="twitter:domain" content="{{ site.url }}" />
     
         {% if page.thumbnail %}
-        <meta property="og:image" content="{{ site.baseurl }}/imgs/posts/{{ page.url }}/{{ page.thumbnail }}" />
-        <meta name="twitter:image" content="{{ site.baseurl }}/imgs/posts/{{ page.url }}/{{ page.thumbnail }}" />
+        <meta property="og:image" content="{{ site.url }}/imgs/posts{{ page.url }}/{{ page.thumbnail }}" />
+        <meta name="twitter:image" content="{{ site.url }}/imgs/posts{{ page.url }}/{{ page.thumbnail }}" />
         {% endif %}
     {% endif %}
     
