--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,8 +17,7 @@
     <meta name="twitter:site" content="@{{ site.media_twitter }}" />
     <meta name="twitter:creator" content="@{{ site.media_twitter }}" />
     <meta name="twitter:title" content="{{ page.title }}" />
-    <meta name="twitter:description" content="{{ site.excerpt | strip_html | lstrip | rstrip }}" />
-    <meta name="twitter:text:description" content="{{ site.excerpt | strip_html | lstrip | rstrip }}" />
+    <meta name="twitter:description" content="{{ page.excerpt | strip_html | lstrip | rstrip }}" />
     <meta name="twitter:url" content="{{ page.url | prepend: site.url }}" />
     <meta name="twitter:domain" content="{{ site.url }}" />
     
