Optimized png images

--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -229,7 +229,7 @@ ul.pagination {
     
     &.widget-profile {
         padding: 30px 30px;
-        background: #fff url(/imgs/profile_background.jpg) 0 -35px no-repeat;
+        background: #fff url(/imgs/profile_background.png) 0 -35px no-repeat;
         background-size: 100%;
         
         h3 {
