Non-blocking scripts

--- a/_includes/vendors.html
+++ b/_includes/vendors.html
@@ -40,7 +40,7 @@
 </script>
 
 <!-- SnapWidget -->
-<script src="https://snapwidget.com/js/snapwidget.js"></script>
+<script async src="https://snapwidget.com/js/snapwidget.js"></script>
 
 <!-- Adsense -->
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
