--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -55,3 +55,7 @@
   ga('create', 'UA-92465523-1', 'auto');
   ga('send', 'pageview');
 </script>
+
+<script src="{{ "/js/jquery-3.1.1.min.js" | prepend: site.baseurl }}"></script>
+<script async src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/script.js" | prepend: site.baseurl }}"></script>
