--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         </div>
 
         {% include footer.html %}
-        {% include vendors.html %}
+        {% include scripts.html %}
 
     </body>
 </html>
