--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,18 +13,18 @@ layout: default
     <div class="col-md-4">
         <div class="primary-sidebar">
             
-            {% include profile.html %}
+            {% include widget-profile.html %}
             
-            {% include archives.html %}
+            {% include widget-archives.html %}
                 
             <aside class="widget adsense">
-                {% include adblock.html %}
-                {% include adsense-300-250.html %}
+                {% include widget-adblock.html %}
+                {% include widget-adsense-300-250.html %}
             </aside>
             
-            {% include twitter.html %}
+            {% include widget-twitter.html %}
             
-            {% include instagram.html %}
+            {% include widget-instagram.html %}
             
         </div>
     </div>
