--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,8 +56,8 @@ layout: default
         </article>
         
         <aside class="widget adsense adsense-responsive">
-            {% include adblock.html %}
-            {% include adsense-responsive.html %}
+            {% include widget-adblock.html %}
+            {% include widget-adsense-responsive.html %}
         </aside>
         
         <aside class="widget">
@@ -71,13 +71,13 @@ layout: default
     <div class="col-md-4">
         <div class="primary-sidebar">
             
-            {% include profile.html %}
+            {% include widget-profile.html %}
             
-            {% include archives.html %}
+            {% include widget-archives.html %}
             
-            {% include twitter.html %}
+            {% include widget-twitter.html %}
             
-            {% include instagram.html %}
+            {% include widget-instagram.html %}
             
         </div>
     </div>
