Remove instagram widget

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,31 +31,11 @@
 </script>
 
 <!-- Twitter -->
-<script>
-   window.twttr = (function(d, s, id) {
-     var js, fjs = d.getElementsByTagName(s)[0],
-       t = window.twttr || {};
-     if (d.getElementById(id)) return t;
-     js = d.createElement(s);
-     js.id = id;
-     js.src = "https://platform.twitter.com/widgets.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   
-     t._e = [];
-     t.ready = function(f) {
-       t._e.push(f);
-     };
-   
-     return t;
-   }(document, "script", "twitter-wjs"));
-</script>
-
-<!-- SnapWidget -->
-<script async src="https://snapwidget.com/js/snapwidget.js"></script>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 <!-- Adsense -->
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 <script src="{{ "/js/jquery-3.1.1.min.js" | prepend: site.baseurl }}"></script>
-<script async src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/script.js" | prepend: site.baseurl }}"></script>
