--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,12 +6,12 @@
     <meta name="description" content="{% if page.layout == 'post' %}{{ page.excerpt | strip_html | lstrip | rstrip }}{% else %}{{ site.description }}{% endif %}" />
     
     {% if page.layout == "post" %}
-    <meta property="og:url" content="{{ page.url | prepend: site.url }}" />
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="{{ page.title }}" />
-    <meta property="og:description" content="{{ page.excerpt | strip_html | lstrip | rstrip }}" />
-    <meta property="og:site_name" content="{{ site.title }}" />
-    <meta property="article:published_time" content="{{ page.date }}" />
+    <meta name="og:url" content="{{ page.url | prepend: site.url }}" />
+    <meta name="og:type" content="article" />
+    <meta name="og:title" content="{{ page.title }}" />
+    <meta name="og:description" content="{{ page.excerpt | strip_html | lstrip | rstrip }}" />
+    <meta name="og:site_name" content="{{ site.title }}" />
+    <meta name="article:published_time" content="{{ page.date }}" />
     
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@{{ site.media_twitter }}" />
