Fix facebook metas

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,8 @@
     <meta property="og:url" content="{{ page.url | prepend: site.url }}" />
     <meta property="og:description" content="{{ page.excerpt | strip_html | lstrip | rstrip }}" />
     <meta property="og:locale" content="fr_FR" />
+    <meta property="fb:admins" content="742178772"/>
+    <meta property="fb:app_id" content="1247828545302060"/>
     
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@{{ site.media_twitter }}" />
