Add adsense block on sidebar

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -75,6 +75,11 @@ layout: default
             
             {% include widget-archives.html %}
             
+            <aside class="widget adsense">
+                {% include widget-adblock.html %}
+                {% include widget-adsense-300-250.html %}
+            </aside>
+            
             {% include widget-twitter.html %}
             
         </div>
