--- a/_includes/widget-profile.html
+++ b/_includes/widget-profile.html
@@ -1,7 +1,7 @@
 <aside class="widget widget-profile">
     <div class="profile-container">
         <div class="profile-content text-center">
-            <img class="profile-picture" src="{{ site.baseurl }}/imgs/portrait.png" alt="Pierre Skowron" />
+            <img class="profile-picture" src="{{ site.url }}/imgs/portrait.png" alt="Pierre Skowron" />
             <h3 class="text-uppercase">Pierre Skowron</h3>
             <p>
                 Développeur web :computer:
