--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
         <article class="post-big">
             {% if page.thumbnail %}
             <div class="post-thumbnail clearfix">
-                <img class="img-responsive" src="{{ site.baseurl }}/imgs/posts{{ page.url }}/{{ page.thumbnail }}" alt="{{ page.title }}" />
+                <img class="img-responsive" src="{{ site.url }}/imgs/posts{{ page.url }}/{{ page.thumbnail }}" alt="{{ page.title }}" />
             </div>
             {% endif %}
             
